added the second and third blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae impedit sint voluptatum nobis deleniti fuga error quasi, recusandae eum quis possimus porro quo molestias, non doloribus totam reprehenderit dolorum accusantium!</p>
     </div>
+    <div>
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae impedit sint voluptatum nobis deleniti fuga error quasi, recusandae eum quis possimus porro quo molestias, non doloribus totam reprehenderit dolorum accusantium!</p>
+    </div>
+    <div>
+        <h3>My third website</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae impedit sint voluptatum nobis deleniti fuga error quasi, recusandae eum quis possimus porro quo molestias, non doloribus totam reprehenderit dolorum accusantium!</p>
+    </div>
 </body>
 </html>
