--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My third website</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae impedit sint voluptatum nobis deleniti fuga error quasi, recusandae eum quis possimus porro quo molestias, non doloribus totam reprehenderit dolorum accusantium!</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaning</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
