added a shirt image

--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
             <li>git push</li>
         </ul>
     </div>
+    <div><h3>shirt tshirt polo shirt</h3></div>
+    <img src="images/shirt.jpeg" alt="">
 </body>
 </html>
